tests/snapshots/run_wpt_conformance__litert_reduceMean_float32_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_mean.https.any.js",
    "reduceMean float32 0D constant tensor empty axes",
    "litert",
    "PASS",
)
