tests/snapshots/run_wpt_conformance__litert_reduceMean_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_mean.https.any.js reduceMean float32 0D tensor empty axes, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMeanInput: f32[];
  }

  nodes {
    [reduceMeanOutput] = reduceMean(reduceMeanInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceMeanOutput; }
}
